# multi-storage-client

./: .gitignore  .licenses.md  CONTRIBUTING.md  flake.nix  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: .production.yml  .source.yml  check.yml  slack.yml
.gitlab/pipelines/: .production.yml
.grafana/provisioning/dashboards/definitions/: multi-storage-client.json
.release_notes/: .unreleased.md  0.22.0.md  0.23.0.md  0.24.0.md  0.25.0.md
docs/src/: conf.py  index.rst
docs/src/references/: api.rst  configuration.rst
docs/src/user_guide/: cache.rst  cli.rst  installation.rst  libraries.rst  quickstart.rst  telemetry.rst
rust/: Cargo.toml
rust/src/: lib.rs
src/multistorageclient/: __init__.py  client.py  config.py  file.py  schema.py  shortcuts.py  types.py
src/multistorageclient/caching/: cache_backend.py
src/multistorageclient/providers/: __init__.py  ais.py  gcs-s3.py  manifest_metadata.py  s3.py
tests/test_multistorageclient/e2e/: common.py  conftest.py  msc_config.template.yaml  test_azure.py  test_gcs.py  test_oci.py  test_s3.py  test_swift.py
tests/test_multistorageclient/unit/: conftest.py  test_cache.py  test_cache_mp.py  test_cli.py  test_config.py  test_pathlib.py  test_schema.py  test_serialization.py  test_shortcuts.py  test_sync.py  test_utils.py
tests/test_multistorageclient/unit/contrib/: test_ray.py
tests/test_multistorageclient/unit/providers/: test_manifest_metadata.py  test_metadata_rewrite.py  test_posix_file.py  (+1 more)
tests/test_multistorageclient_rust/unit/: test_rustclient.py
(+4 files in other folders)
